--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,8 +23,8 @@
       <a class="navbar-brand" href="/">#KarthikB</a>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-			<a class="nav-link active" href="/">Home</a>				
+          <li class="nav-item">
+			<a class="nav-link" href="/">Home</a>				
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about/">About</a>
@@ -47,25 +47,29 @@
       </div>
     </nav>
 
-    <div class="site-wrapper">
+    <div class="site-wrapper visible-on">
 
-      <div class="site-wrapper-inner">
-
+      <div class="site-wrapper-inner hidden-xs-down visible">
         <div class="cover-container">
-          <div class="inner cover">
-            {{ content }}
-          </div>
+            <div class="inner cover">
+              {{ content }}
+            </div>
 	
-	  <div class="mastfoot">
-            <div class="inner">      
-                <ul>
-                <li class ="d-inline">Karthik.B &nbsp;&nbsp;&copy;2017</li>
-                <li class ="d-inline"><a href="mailto:karthik.b.1195@gmail.com">Mail me!</a></li>
-                <li class ="d-inline"><a href="https://github.com/karthik-balu">Github</a></li>
-                <li class ="d-inline">Updated on: &nbsp;&nbsp;30th June 2017</li>
-                </ul>
-	    </div>
-          </div>
+	          <div class="mastfoot">
+              <div class="row inner">
+                <div class="col-md-6">
+                Karthik Balu &copy;2017
+                </div>
+                
+                <div class="col-md-6">
+                <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="icon-gplus"></i></a>
+                <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="icon-mail-alt"></i></a>
+                <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
+        class="icon-linkedin"></i></a>
+                <a href="http://github.com/karthik-balu" class="social"><i class="icon-github-circled"></i></a>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </div>
