--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="/static/css/cover.css" rel="stylesheet">
   </head>
