--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,11 +62,12 @@
                 </div>
                 
                 <div class="col-md-6">
-                <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="icon-gplus"></i></a>
-                <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="icon-mail-alt"></i></a>
+                <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa-google-plus"></i></a>
+                <a href="https://twitter.com/karthik_2095" class="social"><i class="fa-twitter"></i></a>
+                <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
-        class="icon-linkedin"></i></a>
-                <a href="http://github.com/karthik-balu" class="social"><i class="icon-github-circled"></i></a>
+        class="fa-linkedin"></i></a>
+                <a href="http://github.com/karthik-balu" class="social"><i class="fa-github"></i></a>
                 </div>
               </div>
             </div>
