Making footer Neat

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
 	
 	          <div class="mastfoot">
               <div class="row inner">
-                <div class="col-md-6">
+                <div class="col-md-6 copyright">
                 Karthik Balu &copy;2017
                 </div>
                 
