--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -125,7 +125,8 @@ body {
   color: rgba(255,255,255,.5);
 }
 
-
+.social{padding-left:5px;padding-right:5px;float:right;margin-right:50px;font-size:18px;}
+.copyright{padding-left:50px;font-size:18px;}
 
 /*
  * Affix and center
@@ -160,3 +161,4 @@ body {
     width: 42rem;
   }
 }
+
