Making footer Neat again

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,80 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="personal website">
-    <meta name="author" content="karthik.b">
-    <title>{{ page.title }}</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="personal website">
+  <meta name="author" content="karthik.b">
+  <title>{{ page.title }}</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/css/font-awesome.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="/static/css/cover.css" rel="stylesheet">
-  </head>
+  <!-- Bootstrap core CSS -->
+  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+  <link href="/static/css/font-awesome.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="/static/css/cover.css" rel="stylesheet">
+</head>
 
-  <body>
+<body>
 
   <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <a class="navbar-brand" href="/">#KarthikB</a>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-			<a class="nav-link" href="/">Home</a>				
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about/">About</a>
-          </li>
-		  
-          <li class="nav-item">
-            <a class="nav-link" href="/articles/">Articles</a>
-          </li>
-		  
-          <li class="nav-item">
-            <a class="nav-link" href="/projects/">Projects</a>
-          </li>
-		  
-          <li class="nav-item">
-            <a class="nav-link" href="/travel/">Travel Blog</a>
-          </li>
-          
-        </ul>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <a class="navbar-brand" href="/">#KarthikB
+    </a>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+         <a class="nav-link" href="/">Home</a>				
+       </li>
+       <li class="nav-item">
+        <a class="nav-link" href="/about/">About</a>
+      </li>
 
-      </div>
-    </nav>
+      <li class="nav-item">
+        <a class="nav-link" href="/articles/">Articles</a>
+      </li>
 
-    <div class="site-wrapper visible-on">
+      <li class="nav-item">
+        <a class="nav-link" href="/projects/">Projects</a>
+      </li>
 
-      <div class="site-wrapper-inner hidden-xs-down visible">
-        <div class="cover-container">
-            <div class="inner cover">
-              {{ content }}
-            </div>
-	
-	          <div class="mastfoot">
-              <div class="row inner">
-                <div class="col-md-6 copyright">
-                Karthik Balu &copy;2017
-                </div>
-                
-                <div class="col-md-6">
-                <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus"></i></a>
-                <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter"></i></a>
-                <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
-        class="fa fa-linkedin"></i></a>
-                <a href="http://github.com/karthik-balu" class="social"><i class="fa fa-github"></i></a>
-                </div>
-              </div>
-            </div>
+      <li class="nav-item">
+        <a class="nav-link" href="/travel/">Travel Blog</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
+
+<div class="site-wrapper visible-on">
+
+  <div class="site-wrapper-inner hidden-xs-down visible">
+    
+      <div class="cover-container">
+        <div class="inner cover">
+          {{ content }}
         </div>
       </div>
+
+      <footer class="mastfoot">
+      <div class="row inner">
+          <div class="col-xs-6 copyright">
+            Karthik Balu &copy;2017
+          </div>
+
+          <div class="col-xs-6">
+            <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus"></i></a>
+            <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter"></i></a>
+            <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope"></i></a>
+            <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
+              class="fa fa-linkedin"></i></a>
+              <a href="http://github.com/karthik-balu" class="social"><i class="fa fa-github"></i></a>
+            </div>
+          </div>
+        
+      </footer>
     </div>
-	
+  </div>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
@@ -82,4 +84,4 @@
     <script src="/static/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="/static/js/bootstrap.min.js"></script> 
   </body>
-</html>
+  </html>
