--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,13 +34,15 @@
   </div>
 </nav>
 
-<div class="site-wrapper visible-on">
+<div class="site-wrapper">
 
-  <div class="site-wrapper-inner hidden-xs-down visible">
+  <div class="site-wrapper-inner">
     
       <div class="cover-container">
         <div class="inner cover">
+          
           {{ content }}
+          
         </div>
       </div>
 
