--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,11 @@
 ---
 layout: default
 ---
+<div id="shift-2">
 <h1>{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
+<div>
   {{ content }}
+</div>
 </div>
