--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/font-awesome.min.css" rel="stylesheet">
   <!-- Custom styles for this template -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" type="text/css">
   <link href="/static/css/cover.css" rel="stylesheet">
 </head>
 
@@ -20,51 +21,48 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="/">#KarthikB
-    </a>
+    <a class="navbar-brand" href="/">#KarthikB</a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-  {% for item in site.data.list.docs %}
-    <li class="nav-item {% if item.url == page.url %}active{% endif %}">
-      <a class="nav-link {% if item.url == page.url %}active{% endif %}" href="{{ item.url }}">{{ item.title }}</a>
-    </li>
-{% endfor %}
+      <ul class="navbar-nav float-right ml-auto ">
+        {% for item in site.data.list.docs %}
+        <li class="nav-item {% if item.url == page.url %}active{% endif %}">
+          <a class="nav-link {% if item.url == page.url %}active{% endif %}" href="{{ item.url }}">{{ item.title }}</a>
+        </li>
+        {% endfor %}
 
-    </ul>
-  </div>
-</nav>
+      </ul>
+    </div>
+  </nav>
+  <!-- Begin page content -->
 
-<div class="site-wrapper">
+ <div class="container">
+   {{content}}
+    </div>
 
-  <div class="site-wrapper-inner">
-    
-      <div class="cover-container">
-        <div class="inner cover">
-          {{ content }}
+    <footer class="footer">
+      <div class="container">
+        <span  class="text-muted" >
+        <div class="container">
+       <div class="row inner">
+        <div class="col-md-6 copyright">
+          Karthik Balu &copy;2017
         </div>
-      </div>
 
-  </div>
-  </div>
-
-      <footer>
-      <div class="row inner">
-          <div class="col-md-6 copyright">
-            Karthik Balu &copy;2017
-          </div>
-
-    
-          <div class="col-md-6 icons">
-            <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus"></i></a>
-            <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter"></i></a>
-            <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope"></i></a>
-            <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
-              class="fa fa-linkedin"></i></a>
-              <a href="http://github.com/karthik-balu" class="social"><i class="fa fa-github"></i></a>
-            </div>
-          </div>
         
-      </footer>
+        <div class="col-md-6 icons">
+          <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus"></i></a>
+          <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter"></i></a>
+          <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
+            class="fa fa-linkedin"></i></a>
+            <a href="http://github.com/karthik-balu" class="social"><i class="fa fa-github"></i></a>
+          </div>
+        </div>
+
+      </div>
+        </span>
+      </div>
+    </footer>
 
 
     <!-- Bootstrap core JavaScript
@@ -75,3 +73,31 @@
     <script src="/static/js/bootstrap.min.js"></script> 
   </body>
   </html>
+
+<!--
+<div class="container">
+    <div class="mt-3">
+      {{content}}
+    </div>
+
+    <footer class="footer">
+      <div class="container">
+       <div class="row inner">
+        <div class="col-md-6 copyright">
+          Karthik Balu &copy;2017
+        </div>
+
+        
+        <div class="col-md-6 icons">
+          <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus"></i></a>
+          <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter"></i></a>
+          <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
+            class="fa fa-linkedin"></i></a>
+            <a href="http://github.com/karthik-balu" class="social"><i class="fa fa-github"></i></a>
+          </div>
+        </div>
+
+      </div>
+    </footer>
+-->
