--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -4,6 +4,9 @@ a:focus{
   color:black;
 }
 
+code{
+  font-family: "Brown Bold",Arial,sans-serif;
+}
 
 
 #intro{  
@@ -22,6 +25,10 @@ h1 code{
   background-color: black;
 }
 
+h1{
+  font-family: "Brown Bold",Arial,sans-serif;
+}
+
 .list-unstyled{
   font-size: 18px;
   color:black;
@@ -30,6 +37,7 @@ h1 code{
 .navbar
 {
   background-color: black !important;
+  font-family: "Brown Bold",Arial,sans-serif;
 }
 
 #caption{
@@ -38,6 +46,7 @@ h1 code{
   line-height: 2;
   margin-bottom:0% ;
   text-align: center;
+  font-family: "Brown Bold",Arial,sans-serif;
 }
 
 #here{
@@ -105,7 +114,7 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
-  font-family:'Source Sans Pro',sans-serif;
+  font-family:'Helvetica Neue',Arial,sans-serif;
   overflow-x:hidden;
 }
 
