--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,9 @@
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="/static/css/fonts.css" type="text/css">
   <link href="/static/css/cover.css" rel="stylesheet">
-  
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </head>
 
 <body>
