--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,27 +39,24 @@
   </nav>
   <!-- Begin page content -->
 
- <div class="container">
+  <div class="container">
    {{content}}
-    </div>
+ </div>
 
-    <footer class="footer">   
-        <div class="container">
-          <div class="row inner">
-            <div class="col-md-6 copyright">
-                <span  class="text-muted" > Karthik Balu &copy;2017 </span>
-            </div>    
-            <div class="col-md-6">
-                <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus"></i></a>
-                <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter"></i></a>
-                <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope"></i></a>
-                <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
-            class="fa fa-linkedin"></i></a>
-                <a href="http://github.com/karthik-balu" class="social"><i class="fa fa-github"></i></a>
-            </div>
-          </div>
-       </div>
-    </footer>
+ <footer class="footer">   
+  <div class="row container">
+    <div class="col-12 col-md-6 copyright">
+      <span  class="text-muted" > Karthik Balu &copy;2017 </span>
+    </div>    
+    <div class="col-12 col-md-6">
+      <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus fa-fw"></i></a>
+      <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter fa-fw"></i></a>
+      <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope fa-fw"></i></a>
+      <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i class="fa fa-linkedin fa-fw"></i></a>
+      <a href="http://github.com/karthik-balu" class="social"><i class="fa fa-github fa-fw"></i></a>
+    </div>
+  </div>
+</footer>
 
 
     <!-- Bootstrap core JavaScript
@@ -70,31 +67,3 @@
     <script src="/static/js/bootstrap.min.js"></script> 
   </body>
   </html>
-
-<!--
-<div class="container">
-    <div class="mt-3">
-      {{content}}
-    </div>
-
-    <footer class="footer">
-      <div class="container">
-       <div class="row inner">
-        <div class="col-md-6 copyright">
-          Karthik Balu &copy;2017
-        </div>
-
-        
-        <div class="col-md-6 icons">
-          <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus"></i></a>
-          <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter"></i></a>
-          <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope"></i></a>
-          <a href="https://www.linkedin.com/in/karthik-b95" class="social"><i
-            class="fa fa-linkedin"></i></a>
-            <a href="http://github.com/karthik-balu" class="social"><i class="fa fa-github"></i></a>
-          </div>
-        </div>
-
-      </div>
-    </footer>
--->
