--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,10 @@
 ---
 layout: default
 ---
-<div class="shift-2">
-<h1>{{ page.title }}</h1>
+<h1 class="intro">{{ page.title }}</h1>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 <div>
   {{ content }}
 </div>
-</div>
+
