Fix for Hello text, Footer, Updated Articles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,11 +44,11 @@
  </div>
 
  <footer class="footer">   
-  <div class="row container">
+  <div class="row">
     <div class="col-12 col-md-6 copyright">
       <span  class="text-muted" > Karthik Balu &copy;2017 </span>
     </div>    
-    <div class="col-12 col-md-6">
+    <div class="col-12 col-md-6 text-right">
       <a href="https://plus.google.com/+KarthikBalu01" class="social"><i class="fa fa-google-plus fa-fw"></i></a>
       <a href="https://twitter.com/karthik_2095" class="social"><i class="fa fa-twitter fa-fw"></i></a>
       <a href="mailto:karthik.b.1195[at]gmail.com" class="social"><i class="fa fa-envelope fa-fw"></i></a>
