--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -14,7 +14,7 @@ body {
 	font-size: 18px;	    
 }
 
-body > .container {
+body > .container-fluid {
 	padding: 60px 15px 0;
 }
 
@@ -26,9 +26,9 @@ body > .container {
 
 
 .content{
- 	margin-top: 20px;
- 	padding-left: 5px;
-    padding-right: 5px;
+	margin-top: 20px;
+	padding-left: 5px;
+	padding-right: 5px;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	text-rendering: optimizeLegibility;
@@ -36,17 +36,24 @@ body > .container {
 	width: 99%;
 	text-align: center;
 }
-
+.table{
+	margin: auto;
+	width: 90%;
+	float: none;
+	border-radius: 5px;
+	text-align: left !important;
+}
 .article{
 	line-height: 1.5;
+	text-align: justify;
 }
 .article .outer-list>li{
 	font-weight: bold;
 }
 code{
-	white-space: pre;
 	background-color: white;
 }
+
 .center{
 	width: 60%;
 }
@@ -71,13 +78,16 @@ code{
 
 .intro{
 	margin-top:3%;
+	font-size: 1.7em;
+	line-height: 1.5;
 }
+
 
 .hello{
 	margin-top: 10%;
-    font-size: 3em;
-    line-height: 1.5;
-    letter-spacing: 0.001rem;
+	font-size: 3em;
+	line-height: 1.5;
+	letter-spacing: 0.001rem;
 }
 
 .references{
@@ -113,9 +123,9 @@ h1, .navbar, code, #caption{
 
 #pitch{
 	margin-top: 20px;
-    margin-bottom: 50px;
-    line-height: 1.7em;
-    font-size: 1.3em;
+	margin-bottom: 50px;
+	line-height: 1.7em;
+	font-size: 1.3em;
 }
 
 .about{
@@ -123,11 +133,11 @@ h1, .navbar, code, #caption{
 	text-align: justify !important;
 	font-size: 1em;
 	color: black;
-    line-height: 2em;
-    letter-spacing: 0.01rem;
+	line-height: 2em;
+	letter-spacing: 0.01rem;
 }
 
-.article>.list-unstyled>li,.article>.list-unstyled>ol>li{
+.bold-head>li{
 	font-weight: bold;
 }
 
@@ -224,9 +234,16 @@ a:focus{
 }
 
 
-@media(min-width: 576px){
-.image-bigger {
-	max-width: 400px !important;
-	height: auto;
-}
+
+@media(min-width: 1024px){
+	.image-bigger {
+		max-width: 400px !important;
+		height: auto;
+	}
+
+	.intro{
+		margin-top:3%;
+		font-size: 2em !important;
+		line-height: 1.5 !important;
+	}
 }
